# tako

./: CMakeLists.txt
config/: default.yaml
include/tako/: combine.hpp  common_include.hpp  config.hpp  database.hpp  keypoints.hpp  loopclosure.hpp  node.hpp  object.hpp  object_detect.hpp  parameter.hpp  precision_recall.hpp  spatial.hpp
src/: CMakeLists.txt  combine.cpp  config.cpp  database.cpp  keypoints.cpp  node.cpp  object.cpp  object_detect.cpp  parameter.cpp  precision_recall.cpp  spatial.cpp
test/: CMakeLists.txt  combine_image.py  compare_extracion.py  db_load.cpp  feature_extraction.cpp  feature_training.cpp  keyframe_test.cpp  object_test.cpp  spatial_test.cpp  tako_test.cpp
